fixed margin on non mobile

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -22,10 +22,10 @@ html, body {
 
 /* navbar ul */
 
-.navbar-nav {
+/*.navbar-nav {
   margin: 0 -15px;
 }
-
+*/
 /* navbar current tab */
 .navbar-default .navbar-nav>.active>a, 
 .navbar-default .navbar-nav>.active>a:focus, 
